# galactic-eq

./: .gitignore  README.md  deploy.sh  prek.toml  pyproject.toml  requirements.txt
host/: audio_capture.py  fft_processor.py  level_processor.py  main.py  protocol.py  serial_manager.py  udp_sender.py  waveform_processor.py
pico/: config.py  main.py  protocol.py  secrets_template.py  visualizer.py  wifi_receiver.py
